@@ -1,4 +1,4 @@
-KAppTemplate v0.5.2
+KAppTemplate v0.6
 Kurt Granroth <granroth@kde.org>
 ----------------------------------------------------------------------
 
